--- a/Backend/public/styles/index.css
+++ b/Backend/public/styles/index.css
@@ -1,1 +1,86 @@
 /* Code written by Lucas Mouette */
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Roboto;
+}
+
+.nav-container {
+    z-index: 1;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    align-items: center;
+    padding: 10px 40px;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    color:#ffffff;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.nav-container h3 {
+    color: rgba(99, 230,190)
+}
+
+.nav-links {
+    display: flex;
+    gap: 4rem;
+}
+
+.nav-links a {
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 10px;
+    color: #ffffff;
+}
+
+.hero-section {
+    background-image: url(../img/beach-drone.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    text-align: center;
+    position: relative;
+}
+
+.hero-text .title {
+    font-size: 8rem;
+    font-weight: bold;
+    margin: 0;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.hero-text .subtitle {
+    font-size: 1.5rem;
+    margin: 10px 0;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+}
+
+.book-now-button {
+    padding: 15px 40px;
+    background-color: transparent;
+    color: #fff;
+    border: white 2px solid;
+    border-radius: 25px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.book-now-button:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+}
