start of show all trips implementation and further edit book trip

--- a/frontend/css/homepage_section.module.css
+++ b/frontend/css/homepage_section.module.css
@@ -17,7 +17,7 @@
 
 .homepage__section__text h1 {
     display: flex;
-    color: var(--link_color);
+    color: var(--body_text);
 }
 
 .homepage__section__text p {
