--- a/frontend/css/form.module.css
+++ b/frontend/css/form.module.css
@@ -1,1 +1,90 @@
 /* Code written by Lucas Mouette */
+
+.trip_form__container {
+    background-color: #3D3D3D;
+    margin: 60px auto;
+    max-width: 800px;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.trip_form__title {
+    font-family: "SF Pro Display", sans-serif;
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--accent_color);
+    margin-bottom: 20px;
+}
+
+.trip_form__wrapper {
+    width: 100%;
+}
+
+.form__group {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    color: white;
+}
+
+.form__group input[type="text"],
+.form__group input[type="date"],
+.form__group select {
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.form__group_country,
+.form__group_city {
+    display: flex;
+    flex-direction: column;
+}
+
+.form__group_country_dates,
+.form__group_city_dates {
+    display: flex;
+    flex-direction: row;
+    width: 60px;
+    justify-content: space-between;
+}
+
+
+#trip_form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.button__add_city, .button__save {
+    font-family: "SF Pro Text", sans-serif;
+    font-size: 1rem;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button__add_city {
+    background-color: var(--accent_color);
+    color: white;
+    font-weight: bold;
+}
+
+.button__add_city:hover {
+    background-color: #168f9c;
+}
+
+.button__save {
+    background-color: #F2CB05;
+    color: black;
+    font-weight: bold;
+}
+
+.button__save:hover {
+    background-color: #F2E205;
+}
