--- a/frontend/css/LandingPage/hero_section.module.css
+++ b/frontend/css/LandingPage/hero_section.module.css
@@ -1,7 +1,7 @@
 /* Code written by Lucas Mouette */
 
 .hero__section {
-    background-image: url(../public/img/beach-drone.webp);
+    background-image: url(/img/beach-drone.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -19,12 +19,14 @@
 .hero__section__text .title {
     font-size: 8rem;
     font-weight: bold;
+    font-family: var(--hero-font);
     margin: 0;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .hero__section__text .subtitle {
     font-size: 1.5rem;
+    font-family: var(--primary-font);
     margin: 10px 0;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
 }
