--- a/frontend/css/Trips/trip_card.module.css
+++ b/frontend/css/Trips/trip_card.module.css
@@ -6,13 +6,15 @@
 	height: 300px;
 	margin-bottom: 40px;
 	border-radius: 10px;
-	background-color: #fff;
+	background-color: var(--accent_color);
 	border: 2px solid #ddd;
 	font-size: 18px;
 	overflow: hidden;
 	cursor: pointer;
 	box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
 	transition: box-shadow 0.2s ease, transform 0.2s ease;
+	font-family: var(--primary-font);
+	display: flex;
 }
 
 .trip_card:hover {
@@ -28,13 +30,15 @@
 	left: 0;
 }
 
-.trip_card img {
+.trip_card__image {
     position: absolute;
 	height: 300px;
 	width: 400px;
 	top: 0;
 	left: 0;
 	transition: transform 0.2s ease;
+	display: flex;
+	background-color: var(--link_color);
 }
 
 .trip_card__textbox {
@@ -44,20 +48,28 @@
 	left: 430px;
 	width: calc(100% - 470px);
 	font-size: 17px;
+	display: flex;
+	flex-direction: column;
 }
+
 
 .trip_card__title {
 	font-size: 24px;
 }
 
+.trip_card__title h2 {
+	font-family: var(--hero-font);
+	color: #ffffff;
+}
+
 .trip_card__subtitle {
-	color: #888;
+	color: #ffffff;
 }
 
 .trip_card__cities {
     z-index: 10;
 	font-size: 15px;
-	color: #424242;
+	color: #ffffff;
 	height: 125px;
 	overflow: hidden;
 	text-overflow: ellipsis;
