--- a/frontend/css/Trips/trip_card.module.css
+++ b/frontend/css/Trips/trip_card.module.css
@@ -1,80 +1,43 @@
 /* Code written by Lucas Mouette */
 
 .trip_card {
-    position: relative;
-	width: 100%;
-	height: 300px;
-	margin-bottom: 40px;
-	border-radius: 10px;
+	display: flex;
 	background-color: var(--accent_color);
-	border: 2px solid #ddd;
-	font-size: 18px;
-	overflow: hidden;
-	cursor: pointer;
-	box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
-	transition: box-shadow 0.2s ease, transform 0.2s ease;
+	width: 1000px;
+	height: auto;
 	font-family: var(--primary-font);
-	display: flex;
-}
-
-.trip_card:hover {
-	box-shadow: 0 34px 32px -33px rgba(0, 0, 0, .18);
-	transform: translate(0px, -3px);
-}
-
-.trip_card__innerbox {
-    position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-
-.trip_card__image {
-    position: absolute;
-	height: 300px;
-	width: 400px;
-	top: 0;
-	left: 0;
-	transition: transform 0.2s ease;
-	display: flex;
-	background-color: var(--link_color);
+	border-radius: 15px;
+	align-items: center;
+	margin: 20px;
+	padding: 20px;
+	position: relative;
 }
 
 .trip_card__textbox {
-    position: absolute;
-	top: 7%;
-	bottom: 7%;
-	left: 430px;
-	width: calc(100% - 470px);
-	font-size: 17px;
 	display: flex;
 	flex-direction: column;
+	left: 430px;
+	font-size: 17px;
 }
 
-
-.trip_card__title {
-	font-size: 24px;
-}
-
-.trip_card__title h2 {
+.trip_card__title h2{
 	font-family: var(--hero-font);
 	color: #ffffff;
+	font-size: var(--title_text);
 }
 
 .trip_card__subtitle {
 	color: #ffffff;
 }
 
-.trip_card__cities {
-    z-index: 10;
-	font-size: 15px;
-	color: #ffffff;
-	height: 125px;
-	overflow: hidden;
-	text-overflow: ellipsis;
+.trip__info_button {
+	position: absolute;
+	top: 40px;
+	right: 40px;
 }
 
-/* .trip_card__buttons {
-
-} */
+.trip__delete_button {
+	position: absolute;
+	top: 100px;
+	right: 40px;
+}
