--- a/frontend/css/BookTrip/form.module.css
+++ b/frontend/css/BookTrip/form.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(/img/yosemite.webp);
+    background-image: url(/img/japanese-gate.webp);
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
